--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-env": "^2.4.1",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
+    "vue-loader": "^13.0.5",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
