Corrsponding to eslint

--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
+    "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.5",
+    "eslint": "^4.7.2",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-vue": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "style-loader": "^0.18.2",
