--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.5",
+    "compression-webpack-plugin": "^1.0.0",
     "eslint": "^4.7.2",
     "eslint-config-vue": "^2.0.2",
     "eslint-loader": "^1.9.0",
@@ -34,6 +35,7 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "style-loader": "^0.18.2",
+    "uglify-es-webpack-plugin": "^0.10.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
     "vue-loader": "^13.0.5",
