--- a/package.json
+++ b/package.json
@@ -6,39 +6,39 @@
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.2",
-    "express": "^4.15.4",
+    "express": "^4.16.2",
     "getmac": "^1.2.1",
     "hap-nodejs": "^0.4.33",
     "jssha": "^2.3.1",
-    "moment": "^2.18.1",
+    "moment": "^2.19.1",
     "node-echonet-lite": "^0.1.0",
     "node-red": "^0.17.5",
     "node-red-contrib-schedex": "^1.0.0",
     "node-upnp-ssdp": "^0.1.1",
-    "request": "^2.82.0",
+    "request": "^2.83.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
-    "vue": "^2.4.4",
+    "vue": "^2.5.2",
     "vue-strap": "github:wffranco/vue-strap"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
-    "babel-eslint": "^8.0.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "compression-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
-    "eslint": "^4.7.2",
-    "eslint-config-vue": "^2.0.2",
+    "eslint": "^4.9.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-vue": "^2.1.0",
-    "file-loader": "^0.11.2",
+    "eslint-plugin-html": "^4.0.0-alpha.1",
+    "eslint-plugin-vue-libs": "^1.2.1",
+    "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.19.0",
     "uglify-es-webpack-plugin": "^0.10.0",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^13.0.5",
-    "webpack": "^3.6.0"
+    "url-loader": "^0.6.2",
+    "vue-loader": "^13.3.0",
+    "webpack": "^3.7.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
