--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-echonet-lite": "^0.1.0",
     "node-red": "^0.17.5",
     "node-red-contrib-schedex": "^1.0.0",
+    "node-red-dashboard": "^2.5.1",
     "node-upnp-ssdp": "^0.1.1",
     "request": "^2.83.0",
     "socket.io": "^2.0.3",
@@ -38,7 +39,7 @@
     "uglify-es-webpack-plugin": "^0.10.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
-    "webpack": "^3.7.1"
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
