--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "dependencies": {
@@ -8,37 +8,38 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "getmac": "^1.2.1",
-    "hap-nodejs": "^0.4.33",
+    "hap-nodejs": "^0.4.36",
     "jssha": "^2.3.1",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
     "node-echonet-lite": "^0.1.0",
     "node-red": "^0.17.5",
     "node-red-contrib-schedex": "^1.0.0",
-    "node-red-dashboard": "^2.5.1",
+    "node-red-dashboard": "^2.6.2",
     "node-upnp-ssdp": "^0.1.1",
     "request": "^2.83.0",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
-    "vue": "^2.5.2",
-    "vue-strap": "github:wffranco/vue-strap"
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
-    "eslint": "^4.9.0",
+    "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.0-alpha.1",
+    "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-vue-libs": "^1.2.1",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "style-loader": "^0.19.0",
-    "uglify-es-webpack-plugin": "^0.10.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.3.0",
+    "v-qrcode": "^1.0.3",
+    "vue": "^2.5.8",
+    "vue-loader": "^13.5.0",
+    "vue-strap": "github:wffranco/vue-strap",
     "webpack": "^3.8.1"
   },
   "scripts": {
