--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "dependencies": {
@@ -10,37 +10,37 @@
     "getmac": "^1.2.1",
     "hap-nodejs": "^0.4.36",
     "jssha": "^2.3.1",
-    "moment": "^2.19.3",
+    "moment": "^2.19.4",
     "node-echonet-lite": "^0.1.0",
     "node-red": "^0.17.5",
-    "node-red-contrib-schedex": "^1.0.0",
+    "node-red-contrib-schedex": "^1.1.0",
     "node-red-dashboard": "^2.6.2",
     "node-upnp-ssdp": "^0.1.1",
     "request": "^2.83.0",
-    "socket.io-client": "^2.0.4",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
-    "compression-webpack-plugin": "^1.0.1",
+    "compression-webpack-plugin": "^1.1.2",
     "css-loader": "^0.28.7",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-vue-libs": "^1.2.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.1.2",
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.6.2",
     "v-qrcode": "^1.0.3",
-    "vue": "^2.5.9",
+    "vue": "^2.5.11",
     "vue-loader": "^13.5.0",
     "vue-strap": "github:wffranco/vue-strap",
-    "webpack": "^3.9.1"
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
