--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.5.6",
+  "version": "0.5.9",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "dependencies": {
@@ -8,7 +8,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "getmac": "^1.2.1",
-    "hap-nodejs": "^0.4.36",
+    "hap-nodejs": "^0.4.39",
     "jssha": "^2.3.1",
     "moment": "^2.20.1",
     "node-echonet-lite": "^0.2.0",
@@ -23,22 +23,22 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "compression-webpack-plugin": "^1.1.3",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
+    "css-loader": "^0.28.8",
+    "eslint": "^4.15.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-vue": "^4.0.0-beta.4",
+    "eslint-plugin-vue": "^4.2.0",
     "file-loader": "^1.1.6",
-    "html-loader": "^0.5.1",
+    "html-loader": "^0.5.4",
     "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.5",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
     "v-qrcode": "^1.0.3",
     "vue": "^2.5.13",
-    "vue-loader": "^13.6.2",
+    "vue-loader": "^13.7.0",
     "vue-strap": "github:wffranco/vue-strap",
     "webpack": "^3.10.0"
   },
