--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "homeserver",
-  "version": "0.5.12",
+  "version": "0.5.14",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "getmac": "^1.4.0",
-    "hap-nodejs": "^0.4.40",
+    "hap-nodejs": "^0.4.41",
     "jssha": "^2.3.1",
     "moment": "^2.20.1",
     "node-echonet-lite": "^0.2.0",
-    "node-red": "^0.17.5",
-    "node-red-contrib-schedex": "^1.1.0",
-    "node-red-dashboard": "^2.7.0",
+    "node-red": "^0.18.2",
+    "node-red-contrib-schedex": "^1.1.1",
+    "node-red-dashboard": "^2.8.0",
     "node-upnp-ssdp": "^0.1.1",
     "request": "^2.83.0",
     "socket.io": "^2.0.4",
@@ -25,22 +28,22 @@
     "babel-env": "^2.4.1",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
-    "compression-webpack-plugin": "^1.1.3",
+    "compression-webpack-plugin": "^1.1.6",
     "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-vue": "^4.2.0",
+    "eslint-plugin-vue": "^4.2.2",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
-    "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "^0.6.2",
     "v-qrcode": "^1.0.3",
     "vue": "^2.5.13",
-    "vue-loader": "^13.7.0",
+    "vue-loader": "^14.1.1",
     "vue-strap": "github:wffranco/vue-strap",
-    "webpack": "^3.10.0"
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
