--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.5.14",
+  "version": "0.5.17",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "engines": {
@@ -9,41 +9,43 @@
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "getmac": "^1.4.0",
     "hap-nodejs": "^0.4.41",
     "jssha": "^2.3.1",
-    "moment": "^2.20.1",
+    "moment": "^2.21.0",
     "node-echonet-lite": "^0.2.0",
-    "node-red": "^0.18.2",
+    "node-red": "^0.18.4",
     "node-red-contrib-schedex": "^1.1.1",
-    "node-red-dashboard": "^2.8.0",
+    "node-red-dashboard": "^2.8.2",
     "node-upnp-ssdp": "^0.1.1",
-    "request": "^2.83.0",
+    "request": "^2.85.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "compression-webpack-plugin": "^1.1.6",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.17.0",
-    "eslint-loader": "^1.9.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "compression-webpack-plugin": "^1.1.11",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-vue": "^4.2.2",
-    "file-loader": "^1.1.6",
+    "eslint-plugin-vue": "^4.3.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.0.1",
     "v-qrcode": "^1.0.3",
-    "vue": "^2.5.13",
-    "vue-loader": "^14.1.1",
+    "vue": "^2.5.16",
+    "vue-loader": "^14.2.1",
     "vue-strap": "github:wffranco/vue-strap",
-    "webpack": "^3.11.0"
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
