--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.5.20",
+  "version": "0.6.0",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "engines": {
@@ -9,43 +9,48 @@
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.2",
+    "connect-nedb-session": "0.0.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "getmac": "^1.4.1",
     "hap-nodejs": "^0.4.41",
     "jssha": "^2.3.1",
-    "moment": "^2.22.0",
-    "node-echonet-lite": "^0.2.1",
-    "node-red": "^0.18.4",
+    "moment": "^2.22.1",
+    "node-echonet-lite": "^0.2.2",
+    "node-red": "^0.18.7",
     "node-red-contrib-schedex": "^1.1.1",
-    "node-red-dashboard": "^2.8.2",
+    "node-red-dashboard": "^2.9.4",
     "node-upnp-ssdp": "^0.1.1",
-    "request": "^2.85.0",
+    "request": "^2.87.0",
+    "rpi-gpio": "^0.9.1",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-env": "^2.4.1",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.11",
+    "element-ui": "^2.4.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-vue": "^4.5.0",
     "file-loader": "^1.1.11",
+    "hard-source-webpack-plugin": "^0.7.4",
     "html-loader": "^0.5.5",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "v-qrcode": "^1.0.3",
     "vue": "^2.5.16",
-    "vue-loader": "^14.2.2",
+    "vue-loader": "^15.2.2",
     "vue-strap": "github:wffranco/vue-strap",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack": "^4.10.2",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
