Ver.0.7.3 VueStrap -> ElementUI Node.js Ver.10.13.0 Node-RED Ver.0.19.5

--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
   "name": "homeserver",
-  "version": "0.6.0",
+  "version": "0.7.3",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.18.2",
     "connect-nedb-session": "0.0.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "getmac": "^1.4.1",
-    "hap-nodejs": "^0.4.41",
+    "getmac": "^1.4.6",
+    "hap-nodejs": "^0.4.47",
     "jssha": "^2.3.1",
-    "moment": "^2.22.1",
-    "node-echonet-lite": "^0.2.2",
-    "node-red": "^0.18.7",
-    "node-red-contrib-schedex": "^1.1.1",
-    "node-red-dashboard": "^2.9.4",
+    "moment": "^2.22.2",
+    "node-echonet-lite": "^0.4.0",
+    "node-red": "^0.19.5",
+    "node-red-contrib-schedex": "^1.4.1",
+    "node-red-dashboard": "^2.10.1",
     "node-upnp-ssdp": "^0.1.1",
-    "request": "^2.87.0",
-    "rpi-gpio": "^0.9.1",
+    "request": "^2.88.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-env": "^2.4.1",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^0.28.11",
-    "element-ui": "^2.4.0",
-    "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-vue": "^4.5.0",
-    "file-loader": "^1.1.11",
-    "hard-source-webpack-plugin": "^0.7.4",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^1.0.1",
+    "element-ui": "^2.4.10",
+    "eslint": "^5.9.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-vue": "^4.7.1",
+    "file-loader": "^2.0.0",
+    "hard-source-webpack-plugin": "^0.12.0",
     "html-loader": "^0.5.5",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.1.0",
+    "url-loader": "^1.1.2",
     "v-qrcode": "^1.0.3",
-    "vue": "^2.5.16",
-    "vue-loader": "^15.2.2",
-    "vue-strap": "github:wffranco/vue-strap",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.10.2",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4"
+    "vue": "^2.5.17",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.25.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
