--- a/package.json
+++ b/package.json
@@ -1,56 +1,54 @@
 {
   "name": "homeserver",
-  "version": "0.7.3",
+  "version": "0.9.1",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "engines": {
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "basic-auth-connect": "^1.0.0",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.19.0",
     "connect-nedb-session": "0.0.3",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "getmac": "^1.4.6",
-    "hap-nodejs": "^0.4.47",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "hap-nodejs": "^0.4.52",
     "jssha": "^2.3.1",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "node-echonet-lite": "^0.4.0",
-    "node-red": "^0.19.5",
-    "node-red-contrib-schedex": "^1.4.1",
-    "node-red-dashboard": "^2.10.1",
+    "node-red": "^0.20.6",
+    "node-red-contrib-schedex": "^1.6.2",
+    "node-red-dashboard": "^2.15.4",
     "node-upnp-ssdp": "^0.1.1",
     "request": "^2.88.0",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0"
+    "serialport": "^7.1.5",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^1.0.1",
-    "element-ui": "^2.4.10",
-    "eslint": "^5.9.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "file-loader": "^2.0.0",
-    "hard-source-webpack-plugin": "^0.12.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "element-ui": "^2.9.2",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
+    "qrcode.vue": "^1.6.2",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.1.0",
-    "url-loader": "^1.1.2",
-    "v-qrcode": "^1.0.3",
-    "vue": "^2.5.17",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.25.1",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2"
+    "terser-webpack-plugin": "^1.3.0",
+    "url-loader": "^2.0.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
