--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeserver",
-  "version": "0.9.1",
+  "version": "0.12.3",
   "description": "Gecko HomeServer",
   "main": "backend/HomeServer.js",
   "engines": {
@@ -10,45 +10,47 @@
     "body-parser": "^1.19.0",
     "connect-nedb-session": "0.0.3",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "hap-nodejs": "^0.4.52",
+    "express-session": "^1.17.0",
+    "express-socket.io-session": "^1.3.5",
+    "hap-nodejs": "^0.5.6",
     "jssha": "^2.3.1",
     "moment": "^2.24.0",
-    "node-echonet-lite": "^0.4.0",
-    "node-red": "^0.20.6",
-    "node-red-contrib-schedex": "^1.6.2",
-    "node-red-dashboard": "^2.15.4",
+    "node-echonet-lite": "^0.6.0",
+    "node-red": "^1.0.4",
+    "node-red-contrib-schedex": "^1.10.2",
+    "node-red-dashboard": "^2.19.4",
     "node-upnp-ssdp": "^0.1.1",
-    "request": "^2.88.0",
-    "serialport": "^7.1.5",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "request": "^2.88.2",
+    "serialport": "^8.0.7",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-eslint": "^10.0.2",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
-    "compression-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.0.0",
-    "element-ui": "^2.9.2",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "file-loader": "^4.0.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^3.4.2",
+    "element-ui": "^2.13.0",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-vue": "^6.2.1",
+    "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
-    "qrcode.vue": "^1.6.2",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "url-loader": "^2.0.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.35.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.4"
+    "qrcode.vue": "^1.7.0",
+    "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "url-loader": "^3.0.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
